log
vi., 22 de abr. de 2022 11:21:42: 
 tests:  1|8
total_score: 0/70
622a9fa
vi., 22 de abr. de 2022 11:22:06: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
08958fd
vi., 22 de abr. de 2022 11:28:05: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:13: error: implicit declaration of function 'isequal' [-Werror=implicit-function-declaration]
         if (isequal(tree->current->pair->key, key) == 0){
             ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b92e25e
vi., 22 de abr. de 2022 11:28:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
37cc514
vi., 22 de abr. de 2022 11:29:53: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|7
total_score: 5/70
8c1d40b
vi., 22 de abr. de 2022 11:30:27: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:13: error: implicit declaration of function 'isequal' [-Werror=implicit-function-declaration]
         if (isequal(tree->current->pair->key, key)){
             ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
13ce8e7
vi., 22 de abr. de 2022 11:30:46: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:13: error: too few arguments to function 'is_equal'
         if (is_equal(tree->current->pair->key, key)){
             ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
Compilation failed
ba5e43d
